--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="conteiner">
         <h1>O que vou precisar para meu churasco?</h1>
-        <input value="1" id="adultos" name="adultos" placeholder="Adultos" type="number">
-        <input value="0" id="criancas" name="criancas" placeholder="Crianças" type="number">
-        <input value="4" id="duracao" name="duracao" placeholder="Duração (em horas)" type="number">
+        <input id="adultos" name="adultos" placeholder="Adultos" type="number">
+        <input id="criancas" name="criancas" placeholder="Crianças" type="number">
+        <input id="duracao" name="duracao" placeholder="Duração (em horas)" type="number">
         <button onclick="exibeResultado()">Calcular</button>
 
         <div id="resultado">
